--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 APP_PORT=8080
-DB_HOST=localhost
+DB_HOST=byfood-mysql
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=secret
+DB_USER=byfood_user
+DB_PASSWORD=byfood_pass
 DB_NAME=byfood
