--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,9 +3,14 @@ FROM node:20-alpine AS builder
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install
+RUN npm ci
 
 COPY . .
+
+ARG NEXT_PUBLIC_API_BASE_URL
+ARG BOOKS_API_BASE_URL
+ENV NEXT_PUBLIC_API_BASE_URL=$NEXT_PUBLIC_API_BASE_URL
+ENV BOOKS_API_BASE_URL=$BOOKS_API_BASE_URL
 
 RUN npm run build
 
