--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,13 +35,17 @@ services:
   byfood-frontend:
     build:
       context: ./frontend
+      args:
+        NEXT_PUBLIC_API_BASE_URL: "http://localhost:8080"
+        BOOKS_API_BASE_URL: "http://byfood-backend:8080"
     container_name: byfood-frontend
     ports:
       - "3000:3000"
     depends_on:
       - byfood-backend
     environment:
-      NEXT_PUBLIC_API_BASE_URL: http://byfood-backend:8080
+      NEXT_PUBLIC_API_BASE_URL: "http://localhost:8080"
+      BOOKS_API_BASE_URL: "http://byfood-backend:8080"
     stdin_open: true
     tty: true
 
